--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,7 @@ jobs:
               run: npm test
     deploy:
       runs-on: ubuntu-latest
+      needs: start_tests
       steps:
         - name: Get code
           uses: actions/checkout@v4
