--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
             - name: Install dependencies
               run: npm ci # or npm install
             - name: Run lint
-              run: npm lint
+              run: npm run lint
             - name: Run tests
               run: npm test
             - name: Run build
